--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
         <button class = 'btn nav-btn' id = 'movie-btn'>Movies</button>
         <button class = 'btn nav-btn' id = 'video-game-btn'>Video Games</button>
     </nav>
+
+    <header>
+        
+    </header>
+
+ 
     
+    <div id = "treemap">
+
+    </div>
+
     <script src="https://d3js.org/d3.v6.js"></script>
     <script src = "https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>  
