--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
         <button class = 'btn nav-btn' id = 'video-game-btn'>Video Games</button>
     </nav>
 
-    <header>
-        
-    </header>
+    <div id = "tooltip"></div>
 
- 
-    
-    <div id = "treemap">
+    <header></header>
 
-    </div>
+    <div id = "treemap"></div>
+
+    <div id = "legend"></div>
 
     <script src="https://d3js.org/d3.v6.js"></script>
     <script src = "https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
